@@ -38,6 +38,11 @@
 	<LI>HTMLDOC now supports quoted usernames and passwords in
 	URLs.
 
+	<LI>HTMLDOC now defaults unknown colors to white for
+	background colors and black for foreground colors. 
+	This should make documents that use non-standard color
+	names still appear readable.
+
 	<H3>Bug Fixes</H3>
 
 	<LI>"make install" didn't work in the fonts directory.
